# parakeet-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  requirements.txt  vocab.example.txt
python/: parakeet_backend.py  terms_lib.py
scripts/: batch-transcribe.sh  install-links  install.sh  parakeet  parakeetd  terms  terms-sync  transcribe-call.sh
src/: main.rs  multitalker.rs
terms/: manual.txt  sources.json
