[package]
name = "parakeet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
parakeet-rs = { version = "0.3.4", features = ["multitalker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "io-util"] }
